--- a/src/main/resources/templates/a_LogTest.html
+++ b/src/main/resources/templates/a_LogTest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Study-Mate 로그인</title>
-    <link rel="stylesheet" href="login-styles.css">
+    <link rel="stylesheet" th:href="@{/login-styles.css}">
 
 </head>
 <body>
